--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-extensions = "^2.2"
 ptpython = "^2.0"
 isort = "^4.3"
 mypy = "^0.740.0"
+black = {version = "^18.3-alpha.0", allows-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
