--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ isort = "^4.3"
 mypy = "^0.740.0"
 black = {version = "^18.3-alpha.0", allows-prereleases = true}
 factory_boy = "^2.12"
+django-rest-framework = "^0.1.0"
+markdown = "^3.1"
+django-filter = "^2.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
