--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ factory_boy = "^2.12"
 django-rest-framework = "^0.1.0"
 markdown = "^3.1"
 django-filter = "^2.2"
+djoser = "^2.0"
+djangorestframework_simplejwt = "^4.3"
+djangorestframework = "^3.10"
 
 [build-system]
 requires = ["poetry>=0.12"]
