--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ptpython = "^2.0"
 isort = "^4.3"
 mypy = "^0.740.0"
 black = {version = "^18.3-alpha.0", allows-prereleases = true}
+factory_boy = "^2.12"
 
 [build-system]
 requires = ["poetry>=0.12"]
