--- a/reeddit/package.json
+++ b/reeddit/package.json
@@ -7,11 +7,16 @@
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/semantic-ui": "^2.2.7",
     "mobx": "^5.15.0",
     "mobx-state-tree": "^3.15.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "typescript": "3.7.2"
   },
   "scripts": {
