i dont understand what is happening here

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.10"
