--- a/reeddit/package.json
+++ b/reeddit/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@types/jest": "24.0.22",
     "@types/node": "12.12.7",
-    "@types/react": "16.9.11",
+    "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "@types/semantic-ui": "^2.2.7",
@@ -17,6 +17,7 @@
     "react-scripts": "^3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
+    "superagent": "^5.1.0",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -43,6 +44,7 @@
   "proxy": "http://localhost:8000",
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "mobx-react": "^6.1.4"
   }
 }
