--- a/reeddit/package.json
+++ b/reeddit/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.22",
-    "@types/node": "12.12.7",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
+    "@types/node": "^12.12.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.2",
     "mobx": "^5.15.0",
+    "mobx-react-lite": "^1.5.0",
     "mobx-state-tree": "^3.15.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hook-form": "^3.27.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "semantic-ui-react": "^0.88.1",
     "typescript": "3.7.2"
@@ -39,6 +43,8 @@
   "proxy": "http://localhost:8000",
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "mst-middlewares": "^3.15.0",
+    "remotedev": "^0.2.9"
   }
 }
