--- a/reeddit/package.json
+++ b/reeddit/package.json
@@ -44,6 +44,8 @@
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "flow-bin": "^0.111.3",
+    "flow-remove-types": "^2.111.3",
     "mst-middlewares": "^3.15.0",
     "remotedev": "^0.2.9"
   }
