--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.7"
 django = "^2.2"
 pillow = "^6.2"
 psycopg2-binary = "^2.8"
+argon2-cffi = "^19.2"
+bcrypt = "^3.1"
 
 [tool.poetry.dev-dependencies]
 django-extensions = "^2.2"
@@ -23,6 +25,7 @@ django-filter = "^2.2"
 djoser = "^2.0"
 djangorestframework_simplejwt = "^4.3"
 djangorestframework = "^3.10"
+pylint = "^2.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
