--- a/reeddit/package.json
+++ b/reeddit/package.json
@@ -7,10 +7,15 @@
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "graphql": "^14.5.8",
+    "graphql-request": "^1.8.2",
+    "graphql-tag": "^2.10.1",
     "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "mobx-state-tree": "^3.15.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "mst-gql": "^0.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "^3.2.0",
     "typescript": "3.7.2"
   },
