--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.1",
     "mobx": "^5.15.1",
     "mobx-react-lite": "^1.5.2",
     "mobx-state-tree": "^3.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.4.5",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.4"
