--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
+    "@types/react-alert": "^5.2.0",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.1",
@@ -17,6 +18,8 @@
     "mobx-react-lite": "^1.5.2",
     "mobx-state-tree": "^3.15.0",
     "react": "^16.12.0",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.5.1",
     "react-router-dom": "^5.1.2",
