--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 appdirs==1.4.3
+argon2-cffi==19.2.0
+astroid==2.3.3
 attrs==19.3.0
-black==19.10b0
+bcrypt==3.1.7
+black==18.9b0
 CacheControl==0.12.5
 cachy==0.2.0
 certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
 cleo==0.6.8
 Click==7.0
-Django==2.2.7
+Django==2.2.8
+django-cors-headers==3.2.1
 django-extensions==2.2.5
+django-filter==2.2.0
+django-rest-framework==0.1.0
+django-templated-mail==1.1.1
+djangorestframework==3.10.3
+djangorestframework-simplejwt==4.3.0
+djoser==2.0.3
 docopt==0.6.2
 factory-boy==2.12.0
 Faker==2.0.3
@@ -18,7 +29,10 @@ importlib-metadata==0.23
 isort==4.3.21
 jedi==0.15.1
 jsonschema==3.1.1
+lazy-object-proxy==1.4.3
 lockfile==0.12.2
+Markdown==3.1.1
+mccabe==0.6.1
 more-itertools==7.2.0
 msgpack==0.6.2
 mypy==0.740
@@ -32,13 +46,16 @@ poetry==0.12.17
 prompt-toolkit==2.0.10
 psycopg2-binary==2.8.4
 ptpython==2.0.6
+pycparser==2.19
 Pygments==2.4.2
+PyJWT==1.7.1
 pylev==1.3.0
+pylint==2.4.4
 pyparsing==2.4.4
 pyrsistent==0.14.11
 python-dateutil==2.8.1
 pytz==2019.3
--e git+git@github.com:Retarded-Development/reddit.git@009d9c727ea6c0c1ba261745838f68de3c8942d7#egg=reddit
+-e git+https://github.com/Retarded-Development/reddit@8974fac205416e6066493df292838ef94bd253f7#egg=reddit
 regex==2019.11.1
 requests==2.22.0
 requests-toolbelt==0.8.0
@@ -53,4 +70,5 @@ typing-extensions==3.7.4.1
 urllib3==1.25.6
 wcwidth==0.1.7
 webencodings==0.5.1
+wrapt==1.11.2
 zipp==0.6.0
