--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pillow = "^6.2"
 psycopg2-binary = "^2.8"
 argon2-cffi = "^19.2"
 bcrypt = "^3.1"
+django-cors-headers = "^3.2"
+django-gravatar2 = "^1.4"
 
 [tool.poetry.dev-dependencies]
 django-extensions = "^2.2"
