--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ argon2-cffi = "^19.2"
 bcrypt = "^3.1"
 django-cors-headers = "^3.2"
 django-gravatar2 = "^1.4"
+graphene-django = "^2.8.1"
+django-filter = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 django-extensions = "^2.2"
