--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-cors-headers = "^3.2"
 django-gravatar2 = "^1.4"
 graphene-django = "^2.8.1"
 django-filter = "^2.2.0"
+graphene-django-extras = "^0.4.8"
 
 [tool.poetry.dev-dependencies]
 django-extensions = "^2.2"
